--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
-body {
-    background-color: aqua;
+:root {
+    --test-light: rgb(245, 179, 201);
+    --test-dark: rgb(112, 14, 60);
 }
+
+body {
+    background-color: var(--test-light);
+}
+/*
+.hidden {
+    display: none;
+}*/
