--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,3 +16,9 @@ body {
 .hidden {
     display: none;
 }*/
+/*------------------------------------------- Minesweeper ---*/
+.board {
+    display: inline-grid;
+    grid-template-columns: repeat(var(--size), 50px);
+    grid-template-rows: repeat(var(--size), 50px);
+}
