--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,4 +27,6 @@ body {
 .board div {
     height: 50px;
     width: 50px;
+    background-color: var(--test-light);
+    border: 2px solid rgb(112, 14, 60);
 }
