--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,18 @@
     --test-dark: rgb(112, 14, 60);
 }
 
+
+/* GENERAL STYLES */
+
 * {
     margin: 0;
     padding: 0;
-  }
+}
 
-/* GENERAL STYLES */
+body {
+    padding-top: 62px;
+}
+
 .wrapper {
     overflow-x: hidden;
     position: relative;
@@ -21,7 +27,24 @@
 
 /* HEADER */
 
+.navbar-layout {
+    margin-left: 15px;
+    margin-right: 15px;
+}
 
+.logo {
+    width: 150px;
+    height: 35px;
+}
+
+
+
+
+
+
+
+
+/*------------------------------------------- Mwawefoqddd ---*/
 body {
     background-color: var(--test-light);
 }
