--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 :root {
     --test-light: rgb(245, 179, 201);
     --test-dark: rgb(112, 14, 60);
+    --test-light-opacity: rgba(245, 179, 201,1);
 }
 
 
@@ -15,10 +16,12 @@
 body {
     padding-top: 62px;
     padding-bottom: 100px;
+    overflow: hidden;
 }
 
 .wrapper {
     overflow-x: hidden;
+    overflow-y: hidden;
     position: relative;
     min-width: 100%;
     min-height: 100%;
@@ -45,6 +48,45 @@ body {
 /* REFRESH GAME/WIN/LOSE MODAL */
 
 
+.ms-items {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.start-again-button {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    width: 60px;
+    height: 65px;
+    background-color: var(--test-light);
+}
+
+.start-again-svg {
+    width: 40px;
+    height: 55px;
+}
+
+.timer,
+.flag-count {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+}
+
+.flag-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+}
+
+.flag-btn-size {
+    width: 35px;
+    height: 35px;
+}
 
 /* FOOTER */
 
@@ -71,14 +113,7 @@ body {
 .dark {
     background-color: var(--test-dark);
 }
-.start-again-button {
-    width: 125px;
-    height: 125px;
-}
-.start-again-svg {
-    width: 100px;
-    height: 100px;
-}
+
 /*
 .hidden {
     display: none;
