--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,15 @@ body {
 }
 
 
+.settings-btn {
+    border-style: none;
+}
+
+.settings-icon {
+    font-size: 35px;
+}
+
+
 
 /* REFRESH GAME/WIN/LOSE MODAL */
 
@@ -88,11 +97,40 @@ body {
     height: 35px;
 }
 
+
+
+/* MINESWEEPER BOARD */
+
+
+.minesweeper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 40px;
+}
+
+.board {
+    display: flex;
+    flex-wrap: wrap;
+    width: 750px;
+    height: 500px;
+}
+
+.board div {
+    width: 50px;
+    height: 50px;
+    border: 2px solid var(--test-light);
+}
+
+
+
 /* FOOTER */
 
 
 .footer-styles{
     height: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
     background-color: var(--test-light);
 }
 
@@ -101,6 +139,21 @@ body {
     align-items: center;
     justify-content: center;
     height: 40px;
+}
+
+.connect-btn {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.social-links {
+    font-size: 20px;
+    padding-left: 7px;
+}
+
+.volume-icon {
+    padding-left: 5px;
+    font-size: 30px;
 }
 
 /*------------------------------------------- Mwawefoqddd ---*/
@@ -148,18 +201,7 @@ body {
     margin: auto;
 }    
 /*------------------------------------------- Minesweeper ---*/
-.board {
-    display: flex;
-    flex-wrap: wrap;
-    width: 750px;
-    height: 500px;
-}
 
-.board div {
-    width: 50px;
-    height: 50px;
-    border: 2px solid var(--test-light);
-}
 
 .bomb {
     background-color: salmon;
