--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,13 +183,12 @@ body {
         }
 
         /* se, ip6,7,8 etc*/
-        @media (max-width: 325px) {
+       /* @media (max-width: 360px) {
             .board {
                 margin-right: 0;
                 margin-left: 0;
             }
             .wrapper {
-
                 overflow-y: scroll;
             }
             .board div {
@@ -198,7 +197,7 @@ body {
                 width: 40px;
                 height: 40px;
             }
-        }
+        }*/
 
 /*------------------------------------------- Mwawefoqddd ---*/
 body {
