--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,16 +15,15 @@
 
 body {
     overflow: hidden;
-    padding-top: 62px;
+    padding-top: 80px;
 }
 
 .wrapper {
     position: relative;
     overflow-x: hidden;
     overflow-y: hidden;
-    padding-bottom: 40px;
     min-width: 100%;
-    min-height: 100%;
+    bottom: 40px;
 
 }
 
@@ -61,6 +60,7 @@ body {
 .ms-items {
     padding-left: 15px;
     padding-right: 15px;
+    padding-bottom: 20px;
 }
 
 /*----------------------------------------------------------------------bg-col*/
@@ -102,30 +102,32 @@ body {
 
 
 /* MINESWEEPER BOARD */
-
+.wrap-game {
+    
+}
+.game-container {
+    padding-bottom: 50px;
+}
 
 .minesweeper {
     display: flex;
-    padding-top: 15px;
     align-items: center;
     justify-content: center;
+    overflow: scroll;
+    
 }
 
 .board {
     display: flex;
     flex-wrap: wrap;
-    height: 100%;
 }
 
-/*-----------------------------------------------------------------------------border col*/
-.board-dark {
-    background-color: var(--test-dark);
-}
+
 
 /*-----------------------------------------------------------------------------border col*/
 .board div {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border: 2px solid rgb(196, 93, 93);
 }
 
@@ -135,8 +137,10 @@ body {
 
 
 .footer-styles{
+    display: flex;
     padding-left: 10px;
     padding-right: 10px;
+    padding-top: 5px;
     height: 40px;
     background-color: var(--test-light);
     opacity: 0.5;
@@ -144,6 +148,7 @@ body {
 
 .align-footer {
     display: flex;
+    padding-bottom: 20px;
     height: 40px;
     align-items: center;
     justify-content: center;
@@ -170,15 +175,16 @@ body {
 
         /* MOBILE PHONE VIEW QUERIES */
 
+
         @media (max-width: 540px ), (min-height: 800px ) {
             .wrapper {
                 padding-top: 25px;
             }
             .minesweeper {
-                padding-top: 35px;
+                padding-bottom: 45px;
             }
             .footer-styles {
-                margin-bottom: 25px;
+                margin-bottom: 0px;
             }
         }
 
@@ -199,6 +205,28 @@ body {
             }
         }*/
 
+
+
+        /* DESKTOP VIEW QUERIES */
+
+/*
+        @media (min-width: 960px ) {
+            .navbar-layout {
+                margin-left: 20vw;
+                margin-right: 20vw;
+                margin-top: 30px;
+            }
+            
+            .logo {
+                width: 300px;
+                height: 100px;
+            }
+                       
+            .settings-icon {
+                font-size: 50px;
+            }
+        }
+*/
 /*------------------------------------------- Mwawefoqddd ---*/
 body {
     background-color: var(--test-light);
