--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,12 +184,14 @@ footer {
 }
 
 /*------------------------------------------------------------------------------------------------------------*/
-footer a,
-footer i {
+footer a {
     color: var(--test-dark);
     font-size: 20px;
 }
-
+footer i {
+    color: var(--test-dark);
+    font-size: 30px;
+}
 /*------------------------------------------------------------------------------------------------------------*/
 footer a:active,
 footer a:visited {
@@ -202,6 +204,8 @@ footer a:hover {
 }
 
 .connect-btn {
+    padding-top: 5px;
+    padding-bottom: 5px;
     padding-left: 5px;
     padding-right: 5px;
 }
